--- a/arch/arm/boot/dts/k2hk-netcp.dtsi
+++ b/arch/arm/boot/dts/k2hk-netcp.dtsi
@@ -277,6 +277,31 @@ netcp: netcp@2000000 {
 			netcp-gbe = <&gbe1>;
 		};
 	};
+
+};
+
+crypto@20c0000 {
+	compatible = "ti,keystone-crypto";
+	label = "crypto-gbe";
+	reg = <0x20c0000 0x40000>;
+	clocks = <&clksa>;
+
+	ti,navigator-dmas = <&dma_gbe 26>, <&dma_gbe 6>;
+	ti,navigator-dma-names = "crypto-rx", "crypto-tx";
+
+	rx-channel = "crypto-rx";
+	rx-queue-depth = <256 64 0 0>;
+	rx-buffer-size = <1500 4096 0 0>;
+	rx-compl-queue = <8712>;
+	rx-pool	= <512 12>;
+
+	tx-channel = "crypto-tx";
+	tx-queue-depth = <256>;
+	tx-compl-queue = <8713>;
+	tx-pool = <512 12>;
+	tx-submit-queue = <646>;
+
+	sc-id = <0x7000 0x71ff>;
 };
 
 xgbe_subsys: subsys@2f00000 {
