--- a/ti_config_fragments/connectivity.cfg
+++ b/ti_config_fragments/connectivity.cfg
@@ -138,6 +138,7 @@ CONFIG_NET_CLS_IND=y
 CONFIG_NET_SCH_FIFO=y
 CONFIG_IP_SCTP=m
 CONFIG_VLAN_8021Q=m
+CONFIG_TI_KEYSTONE_NETCP_CPTS=y
 
 #MDIO phys
 CONFIG_MICREL_PHY=y
