am57: jailhouse: reserve memory for jailhouse
We reserve memory for jailhouse supervisor and inmate.

Signed-off-by: Vitaly Andrianov <vitalya@ti.com>
Signed-off-by: Jacob Stiffler <j-stiffler@ti.com>

--- a/arch/arm/boot/dts/am57xx-evm-reva3.dts
+++ b/arch/arm/boot/dts/am57xx-evm-reva3.dts
@@ -12,6 +12,20 @@
 
 / {
 	model = "TI AM572x EVM Rev A3";
+
+	reserved-memory {
+		jailhouse: jailhouse@ef000000 {
+			reg = <0x0 0xef000000 0x0 0x1000000>;
+			no-map;
+			status = "okay";
+		};
+
+		jh_inmate: jh_inmate@ee000000 {
+			reg = <0x0 0xee000000 0x0 0x1000000>;
+			no-map;
+			status = "okay";
+		};
+	};
 };
 
 &dra7_pmx_core {
